[gd_scene load_steps=4 format=3 uid="uid://bpoggto7byge"]

[ext_resource type="Script" uid="uid://ojsk27a3f7ud" path="res://scripts/ui/TrainingScene.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_info_panel"]
bg_color = Color(0.15, 0.15, 0.22, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_start_button"]
bg_color = Color(0.2, 0.8, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TrainingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚Üê ËøîÂõû"

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Ë®ìÁ∑¥ÂÆ§ÂêçÁ®±"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="InfoPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_info_panel")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ExpLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "‚ú® Á∂ìÈ©óÂÄº: 300"

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "‚è±Ô∏è Ë®ìÁ∑¥ÊôÇÈñì: 30Áßí"

[node name="TeamsLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üë• Ë®ìÁ∑¥Èöä‰ºç: 1"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TrainingTeamsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartTrainingButton" type="Button" parent="MarginContainer/VBoxContainer/BottomBar"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_start_button")
text = "ÈñãÂßãË®ìÁ∑¥"

[node name="CardSelectorModal" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="ModalPanel" type="PanelContainer" parent="CardSelectorModal"]
custom_minimum_size = Vector2(1400, 900)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -700.0
offset_top = -450.0
offset_right = 700.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CardSelectorModal/ModalPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CardSelectorModal/ModalPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderLabel" type="Label" parent="CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ÈÅ∏ÊìáË®ìÁ∑¥Âç°Áâá (0/5)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InventoryScroll" type="ScrollContainer" parent="CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardGridContainer" type="GridContainer" parent="CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer/InventoryScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 8

[node name="ButtonHBox" type="HBoxContainer" parent="CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ConfirmButton" type="Button" parent="CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer/ButtonHBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Á¢∫Ë™ç"

[node name="CancelButton" type="Button" parent="CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer/ButtonHBox"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ÂèñÊ∂à"
