# TrainingScene.gd
# è¨“ç·´ç•Œé¢ - å®Œå…¨ç¨ç«‹çš„è¨“ç·´ç³»ç»Ÿ
extends Control

# ==================== ç¯€é»å¼•ç”¨ ====================
@onready var back_button = $MarginContainer/VBoxContainer/TopBar/BackButton
@onready var title_label = $MarginContainer/VBoxContainer/TopBar/TitleLabel
@onready var exp_label = $MarginContainer/VBoxContainer/InfoPanel/HBoxContainer/ExpLabel
@onready var time_label = $MarginContainer/VBoxContainer/InfoPanel/HBoxContainer/TimeLabel
@onready var teams_label = $MarginContainer/VBoxContainer/InfoPanel/HBoxContainer/TeamsLabel
@onready var training_teams_list = $MarginContainer/VBoxContainer/ScrollContainer/TrainingTeamsList
@onready var start_button = $MarginContainer/VBoxContainer/BottomBar/StartTrainingButton
@onready var card_selector_modal = $CardSelectorModal
@onready var card_grid = $CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer/InventoryScroll/CardGridContainer
@onready var selector_header = $CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer/HeaderLabel
@onready var confirm_button = $CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer/ButtonHBox/ConfirmButton
@onready var cancel_button = $CardSelectorModal/ModalPanel/MarginContainer/VBoxContainer/ButtonHBox/CancelButton

# ==================== è¨“ç·´å®¤æ•¸æ“š ====================
var room_data: Dictionary = {}
var training_time: int = 30
var exp_reward: int = 300
var max_teams: int = 1

# ==================== è¨“ç·´éšŠä¼ ====================
# training_teams[team_index] = [card_instance_id, ...]
var training_teams: Array = []
var team_rows: Array = []  # TrainingTeamRow instances

# ==================== è¨“ç·´ç‹€æ…‹ ====================
enum TrainingState {
	IDLE,
	TRAINING,
	COMPLETED
}

var current_state: TrainingState = TrainingState.IDLE
var remaining_time: float = 0.0
var timer: Timer = null

# ==================== å¡ç‰‡é¸æ“‡å™¨ ====================
var current_editing_team_index: int = -1
var selected_cards_for_edit: Array = []

# ==================== åˆå§‹åŒ– ====================
func _ready():
	back_button.pressed.connect(_on_back_pressed)
	start_button.pressed.connect(_on_start_button_pressed)
	confirm_button.pressed.connect(_on_selector_confirm_pressed)
	cancel_button.pressed.connect(_on_selector_cancel_pressed)

	# å‰µå»ºè¨ˆæ™‚å™¨ï¼ˆç”¨æ–¼UIæ›´æ–°ï¼‰
	timer = Timer.new()
	timer.timeout.connect(_on_timer_tick)
	add_child(timer)
	timer.start(1.0)  # æ¯ç§’æ›´æ–°ä¸€æ¬¡UI

	# å¾ GameManager ç²å–è¨“ç·´å®¤æ•¸æ“š
	if GameManager.current_training_room.size() > 0:
		setup(GameManager.current_training_room)
	else:
		setup_with_test_data()

	# âœ… æª¢æŸ¥æ˜¯å¦æœ‰é€²è¡Œä¸­çš„è¨“ç·´
	check_active_training()

func setup(room: Dictionary):
	"""è¨­å®šè¨“ç·´å®¤"""
	room_data = room
	training_time = room.get("training_time", 30)
	exp_reward = room.get("exp_reward", 300)
	max_teams = room.get("max_teams", 1)

	# åˆå§‹åŒ–è¨“ç·´éšŠä¼ï¼ˆå¦‚æœæ²’æœ‰é€²è¡Œä¸­çš„è¨“ç·´ï¼‰
	if not PlayerDataManager.is_training_active():
		training_teams.clear()
		for i in range(max_teams):
			training_teams.append([])
	else:
		# å¾é€²è¡Œä¸­çš„è¨“ç·´æ¢å¾©éšŠä¼
		var active_training = PlayerDataManager.get_active_training()
		if active_training.room_id == room_data.get("room_id", ""):
			training_teams = active_training.teams.duplicate(true)

	update_ui()

	# ğŸ¯ é€šçŸ¥ä»»å‹™ç³»çµ±ï¼šé€²å…¥è¨“ç·´å ´æ™¯
	TaskManager.notify_event("scene_entered", {"scene_name": "training"})
	# ğŸ¯ é€šçŸ¥ä»»å‹™ç³»çµ±ï¼šé€²å…¥è¨“ç·´å®¤
	TaskManager.notify_event("training_room_entered", {"room_id": room_data.get("room_id", "")})

	print("ğŸ“ ä»»å‹™ç³»çµ±é€šçŸ¥ï¼šscene_entered (training) + training_room_entered (%s)" % room_data.get("room_id", ""))

func setup_with_test_data():
	"""ä½¿ç”¨æµ‹è¯•æ•¸æ“šè¨­å®š"""
	room_data = {
		"room_id": "TR_001",
		"room_name": "åŸºæœ¬è¨“ç·´å®¤",
		"room_icon": "ğŸ“š",
		"training_time": 30,
		"exp_reward": 300,
		"max_teams": 1
	}
	setup(room_data)

# ==================== UI æ›´æ–° ====================
func update_ui():
	"""æ›´æ–°ç•Œé¢"""
	var room_icon = room_data.get("room_icon", "ğŸ“š")
	var room_name = room_data.get("room_name", "è¨“ç·´å®¤")
	title_label.text = "%s %s" % [room_icon, room_name]

	exp_label.text = "âœ¨ ç¶“é©—å€¼: %d" % exp_reward
	time_label.text = "â±ï¸ è¨“ç·´æ™‚é–“: %dç§’" % training_time
	teams_label.text = "ğŸ‘¥ è¨“ç·´éšŠä¼: %d" % max_teams

	update_training_teams()
	update_start_button()

func update_training_teams():
	"""æ›´æ–°è¨“ç·´éšŠä¼åˆ—è¡¨"""
	# æ¸…ç©ºç°æœ‰è¡Œ
	for row in team_rows:
		row.queue_free()
	team_rows.clear()

	# åŠ è½½ TrainingTeamRow åœºæ™¯
	var team_row_scene = load("res://scenes/training/TrainingTeamRow.tscn")

	# å‰µå»ºè¨“ç·´éšŠä¼è¡Œ
	for i in range(max_teams):
		var row = team_row_scene.instantiate()
		training_teams_list.add_child(row)
		team_rows.append(row)

		# è¨­å®šæ•¸æ“šï¼ˆå®‰å…¨è¨ªå•ï¼Œå¦‚æœ training_teams å¤ªçŸ­å‰‡ç”¨ç©ºé™£åˆ—ï¼‰
		var team_data = training_teams[i] if i < training_teams.size() else []
		row.setup(i, team_data)

		# é€£æ¥ä¿¡å·
		row.edit_team_requested.connect(_on_team_row_edit_requested)
		row.slot_clicked.connect(_on_team_row_slot_clicked)
		row.card_removed.connect(_on_team_row_card_removed)
		row.team_cleared.connect(_on_team_row_cleared)

func update_start_button():
	"""æ›´æ–°é–‹å§‹æŒ‰éˆ•çŠ¶æ€"""
	match current_state:
		TrainingState.IDLE:
			start_button.text = "é–‹å§‹è¨“ç·´"
			start_button.disabled = false
		TrainingState.TRAINING:
			start_button.text = "è¨“ç·´ä¸­ (%ds)" % int(remaining_time)
			start_button.disabled = true
		TrainingState.COMPLETED:
			start_button.text = "æ¥æ”¶çå‹µ"
			start_button.disabled = false

# ==================== éšŠä¼è¡Œå›è°ƒ ====================
func _on_team_row_edit_requested(team_index: int):
	"""ç·¨è¼¯æ•´ä¸ªéšŠä¼"""
	print("âœï¸ ç·¨è¼¯è¨“ç·´éšŠä¼ %d" % team_index)
	current_editing_team_index = team_index
	selected_cards_for_edit = training_teams[team_index].duplicate()
	open_card_selector()

func _on_team_row_slot_clicked(team_index: int, slot_index: int):
	"""é»æ“Šæ§½ä½"""
	# âœ… æª¢æŸ¥å¼·åˆ¶ä»»å‹™é™åˆ¶
	if not TaskManager.is_action_allowed("training_card_select"):
		TaskManager.show_mandatory_quest_message()
		return

	print("ğŸ‘† é»æ“Šæ§½ä½ [éšŠä¼%d, æ§½ä½%d]" % [team_index, slot_index])
	current_editing_team_index = team_index
	selected_cards_for_edit = training_teams[team_index].duplicate()
	open_card_selector()

func _on_team_row_card_removed(team_index: int, slot_index: int):
	"""ç§»é™¤å¡ç‰‡"""
	print("ğŸ—‘ï¸ ç§»é™¤å¡ç‰‡ [éšŠä¼%d, æ§½ä½%d]" % [team_index, slot_index])
	if slot_index < training_teams[team_index].size():
		training_teams[team_index].remove_at(slot_index)
		update_training_teams()

func _on_team_row_cleared(team_index: int):
	"""æ¸…ç©ºéšŠä¼"""
	print("ğŸ—‘ï¸ æ¸…ç©ºè¨“ç·´éšŠä¼ %d" % team_index)
	training_teams[team_index].clear()
	update_training_teams()

# ==================== æŒ‰éˆ•å›è°ƒ ====================
func _input(event: InputEvent):
	"""è™•ç† ESC éµè¿”å›"""
	if event.is_action_pressed("ui_cancel"):  # ESC éµ
		if card_selector_modal and card_selector_modal.visible:
			# å¦‚æœå¡ç‰‡é¸æ“‡å™¨æ‰“é–‹ï¼Œå…ˆé—œé–‰å®ƒ
			_on_selector_cancel_pressed()
		else:
			# æ­£å¸¸è¿”å›
			_on_back_pressed()

func _on_back_pressed():
	"""è¿”å›è¨“ç·´å®¤é¸æ“‡"""
	print("ğŸ”™ è¿”å›è¨“ç·´å®¤é¸æ“‡")
	GameManager.goto_training_select()

func _on_start_button_pressed():
	"""é–‹å§‹/æ¥æ”¶æŒ‰éˆ•è¢«é»æ“Š"""
	match current_state:
		TrainingState.IDLE:
			start_training()
		TrainingState.COMPLETED:
			receive_rewards()

# ==================== å¡ç‰‡é¸æ“‡å™¨ ====================
func open_card_selector():
	"""æ‰“å¼€å¡ç‰‡é¸æ“‡å™¨"""
	card_selector_modal.visible = true
	update_card_selector()

func update_card_selector():
	"""æ›´æ–°å¡ç‰‡é¸æ“‡å™¨"""
	selector_header.text = "é¸æ“‡è¨“ç·´å¡ç‰‡ (%d/5)" % selected_cards_for_edit.size()

	# æ¸…ç©ºç°æœ‰å¡ç‰‡
	for child in card_grid.get_children():
		child.queue_free()

	# ç²å–æ‰€æœ‰å¯ç”¨å¡ç‰‡
	var all_cards = PlayerDataManager.get_all_card_instances()

	# å‰µå»ºå¡ç‰‡æŒ‰éˆ•
	for card_instance in all_cards:
		var card_data = DataManager.get_card(card_instance.card_id)
		if card_data:
			# âœ… è·³éæ»¿ç­‰å¡ç‰‡
			if card_instance.current_level >= card_instance.max_level:
				continue
			var card_button = create_card_button(card_instance, card_data)
			card_grid.add_child(card_button)

func create_card_button(card_instance, card_data) -> PanelContainer:
	"""å‰µå»ºå¡ç‰‡æŒ‰éˆ•ï¼ˆå¸¶å¡åœ–ï¼‰"""
	# å…ƒç´ é¡è‰²å®šç¾©
	var ELEMENT_COLORS = {
		Constants.Element.METAL: Color("FFD700"),
		Constants.Element.WOOD: Color("33CC33"),
		Constants.Element.WATER: Color("3388FF"),
		Constants.Element.FIRE: Color("FF3333"),
		Constants.Element.EARTH: Color("CC9933"),
		Constants.Element.HEART: Color("FF66CC")
	}

	var ELEMENT_NAMES = {
		Constants.Element.METAL: "é‡‘",
		Constants.Element.WOOD: "æœ¨",
		Constants.Element.WATER: "æ°´",
		Constants.Element.FIRE: "ç«",
		Constants.Element.EARTH: "åœŸ",
		Constants.Element.HEART: "å¿ƒ"
	}

	# å‰µå»º PanelContainer ä¸¦è¨­ç½®å…ƒç´ é¡è‰²èƒŒæ™¯
	var panel = PanelContainer.new()
	panel.custom_minimum_size = Vector2(120, 180)

	# âœ… è¨­ç½®å¡é¢èƒŒæ™¯ç‚ºå…ƒç´ é¡è‰²
	var style = StyleBoxFlat.new()
	style.bg_color = ELEMENT_COLORS.get(card_instance.element, Color.GRAY)
	style.border_width_left = 2
	style.border_width_top = 2
	style.border_width_right = 2
	style.border_width_bottom = 2
	style.border_color = Color(0.4, 0.4, 0.4, 1)
	style.corner_radius_top_left = 5
	style.corner_radius_top_right = 5
	style.corner_radius_bottom_right = 5
	style.corner_radius_bottom_left = 5
	panel.add_theme_stylebox_override("panel", style)

	# å‰µå»ºæŒ‰éˆ•
	var button = Button.new()
	button.flat = true
	panel.add_child(button)

	# å‰µå»ºå…§å®¹å®¹å™¨
	var margin = MarginContainer.new()
	margin.set_anchors_preset(Control.PRESET_FULL_RECT)
	margin.add_theme_constant_override("margin_left", 5)
	margin.add_theme_constant_override("margin_top", 5)
	margin.add_theme_constant_override("margin_right", 5)
	margin.add_theme_constant_override("margin_bottom", 5)
	button.add_child(margin)

	var vbox = VBoxContainer.new()
	vbox.add_theme_constant_override("separation", 3)
	margin.add_child(vbox)

	# å¡åœ–å®¹å™¨
	var texture_container = Control.new()
	texture_container.custom_minimum_size = Vector2(0, 100)
	vbox.add_child(texture_container)

	# å¡åœ–ï¼ˆå¦‚æœæœ‰çš„è©±ï¼‰
	var texture = DataManager.get_card_texture(card_instance.card_id)
	if texture:
		var card_texture = TextureRect.new()
		card_texture.set_anchors_preset(Control.PRESET_FULL_RECT)
		card_texture.texture = texture
		card_texture.expand_mode = TextureRect.EXPAND_FIT_WIDTH_PROPORTIONAL
		card_texture.stretch_mode = TextureRect.STRETCH_KEEP_ASPECT_CENTERED
		card_texture.mouse_filter = Control.MOUSE_FILTER_IGNORE
		texture_container.add_child(card_texture)
	else:
		# âœ… æ²’æœ‰å¡åœ–æ™‚ï¼Œé¡¯ç¤ºå…ƒç´ é¡è‰²èƒŒæ™¯ä½œç‚ºæ›¿ä»£
		var card_sprite = ColorRect.new()
		card_sprite.set_anchors_preset(Control.PRESET_FULL_RECT)
		card_sprite.color = ELEMENT_COLORS.get(card_instance.element, Color.GRAY)
		card_sprite.mouse_filter = Control.MOUSE_FILTER_IGNORE
		texture_container.add_child(card_sprite)

	# ç­‰ç´šæ¨™ç±¤
	var level_label = Label.new()
	level_label.text = "Lv. %d" % card_instance.current_level
	level_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	level_label.add_theme_font_size_override("font_size", 12)
	level_label.add_theme_color_override("font_color", Color.WHITE)
	level_label.add_theme_color_override("font_shadow_color", Color(0, 0, 0, 0.8))
	level_label.add_theme_constant_override("shadow_offset_x", 1)
	level_label.add_theme_constant_override("shadow_offset_y", 1)
	level_label.mouse_filter = Control.MOUSE_FILTER_IGNORE

	# ç­‰ç´šèƒŒæ™¯
	var level_bg = ColorRect.new()
	level_bg.color = Color(0, 0, 0, 0.7)
	level_bg.set_anchors_preset(Control.PRESET_BOTTOM_WIDE)
	level_bg.offset_top = -16
	level_bg.z_index = -1
	level_bg.mouse_filter = Control.MOUSE_FILTER_IGNORE
	level_label.add_child(level_bg)

	level_label.set_anchors_preset(Control.PRESET_BOTTOM_WIDE)
	level_label.offset_top = -16
	texture_container.add_child(level_label)

	# å…ƒç´ æ¨™ç±¤
	var element_name = ELEMENT_NAMES.get(card_instance.element, "??")
	var card_element_color = ELEMENT_COLORS.get(card_instance.element, Color.WHITE)
	var element_label = Label.new()
	element_label.text = "[%s]" % element_name
	element_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	element_label.add_theme_font_size_override("font_size", 11)
	element_label.add_theme_color_override("font_color", card_element_color)
	element_label.mouse_filter = Control.MOUSE_FILTER_IGNORE
	vbox.add_child(element_label)

	# åç¨±æ¨™ç±¤
	var name_label = Label.new()
	name_label.text = card_data.card_name
	name_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	name_label.add_theme_font_size_override("font_size", 12)
	name_label.add_theme_color_override("font_color", Color(0.9, 0.9, 0.9))
	name_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
	name_label.mouse_filter = Control.MOUSE_FILTER_IGNORE
	vbox.add_child(name_label)

	# æª¢æŸ¥æ˜¯å¦å·²é¸æ“‡
	var is_selected = card_instance.instance_id in selected_cards_for_edit

	if is_selected:
		panel.modulate = Color(0.5, 1.0, 0.5)
	else:
		panel.modulate = Color(1, 1, 1)

	button.pressed.connect(_on_card_selected_in_selector.bind(card_instance.instance_id))
	return panel

func _on_card_selected_in_selector(card_instance_id: String):
	"""åœ¨é¸æ“‡å™¨ä¸­é»æ“Šå¡ç‰‡"""
	if card_instance_id in selected_cards_for_edit:
		# å–æ¶ˆé¸æ“‡
		selected_cards_for_edit.erase(card_instance_id)
	else:
		# é¸æ“‡å¡ç‰‡ï¼ˆæœ€å¤š5å¼µï¼‰
		if selected_cards_for_edit.size() < 5:
			selected_cards_for_edit.append(card_instance_id)

	update_card_selector()

func _on_selector_confirm_pressed():
	"""ç¢ºèªé¸æ“‡"""
	if current_editing_team_index >= 0 and current_editing_team_index < training_teams.size():
		training_teams[current_editing_team_index] = selected_cards_for_edit.duplicate()

	card_selector_modal.visible = false
	update_training_teams()

func _on_selector_cancel_pressed():
	"""å–æ¶ˆé¸æ“‡"""
	card_selector_modal.visible = false

# ==================== æª¢æŸ¥é€²è¡Œä¸­çš„è¨“ç·´ ====================
func check_active_training():
	"""æª¢æŸ¥æ˜¯å¦æœ‰é€²è¡Œä¸­çš„è¨“ç·´"""
	if PlayerDataManager.is_training_active():
		var active_training = PlayerDataManager.get_active_training()

		# æª¢æŸ¥æ˜¯å¦æ˜¯ç•¶å‰è¨“ç·´å®¤çš„è¨“ç·´
		if active_training.room_id == room_data.get("room_id", ""):
			if active_training.is_completed:
				# è¨“ç·´å·²å®Œæˆï¼Œå¯ä»¥é ˜å–çå‹µ
				current_state = TrainingState.COMPLETED
			else:
				# è¨“ç·´é€²è¡Œä¸­
				current_state = TrainingState.TRAINING
				remaining_time = active_training.remaining_time

			update_start_button()
			print("ğŸ“‹ æ¢å¾©è¨“ç·´ç‹€æ…‹ï¼š%sï¼Œå‰©é¤˜æ™‚é–“ï¼š%.0f ç§’" % [
				"å·²å®Œæˆ" if active_training.is_completed else "é€²è¡Œä¸­",
				active_training.remaining_time
			])

# ==================== è¨“ç·´ç³»ç»Ÿ ====================
func start_training():
	"""é–‹å§‹è¨“ç·´"""
	# âœ… æª¢æŸ¥å¼·åˆ¶ä»»å‹™é™åˆ¶
	if not TaskManager.is_action_allowed("training_start"):
		TaskManager.show_mandatory_quest_message()
		return

	print("ğŸ‹ï¸ é–‹å§‹è¨“ç·´ï¼")

	# æª¢æŸ¥æ˜¯å¦è‡³å°‘æœ‰ä¸€å¼µå¡ç‰‡
	var has_cards = false
	for team in training_teams:
		if team.size() > 0:
			has_cards = true
			break

	if not has_cards:
		GameManager.show_message("ç„¡æ³•é–‹å§‹", "è‡³å°‘éœ€è¦ä¸€å¼µå¡ç‰‡æ‰èƒ½é–‹å§‹è¨“ç·´ï¼")
		return

	# âœ… ä½¿ç”¨èƒŒæ™¯è¨“ç·´ç³»çµ±
	PlayerDataManager.start_training(
		room_data.get("room_id", ""),
		training_time,
		training_teams,
		exp_reward
	)

	current_state = TrainingState.TRAINING
	remaining_time = training_time

	update_start_button()

	# ğŸ¯ é€šçŸ¥ä»»å‹™ç³»çµ±ï¼šè¨“ç·´é–‹å§‹
	TaskManager.notify_event("training_started", {
		"room_id": room_data.get("room_id", ""),
		"teams": training_teams
	})

func _on_timer_tick():
	"""è¨ˆæ™‚å™¨æ›´æ–°ï¼ˆç”¨æ–¼UIæ›´æ–°ï¼‰"""
	# âœ… å¾ PlayerDataManager ç²å–ç•¶å‰è¨“ç·´ç‹€æ…‹
	if PlayerDataManager.is_training_active():
		var active_training = PlayerDataManager.get_active_training()

		# åªæ›´æ–°ç•¶å‰è¨“ç·´å®¤çš„è¨“ç·´
		if active_training.room_id == room_data.get("room_id", ""):
			if active_training.is_completed and current_state != TrainingState.COMPLETED:
				# è¨“ç·´å‰›å‰›å®Œæˆ
				complete_training()
			elif current_state == TrainingState.TRAINING:
				# æ›´æ–°å‰©é¤˜æ™‚é–“
				remaining_time = active_training.remaining_time
				update_start_button()

func complete_training():
	"""è¨“ç·´å®Œæˆï¼ˆåˆ‡æ›åˆ°å¯é ˜å–ç‹€æ…‹ï¼‰"""
	print("âœ… è¨“ç·´å®Œæˆï¼")
	current_state = TrainingState.COMPLETED
	update_start_button()

func receive_rewards():
	"""æ¥æ”¶çå‹µ"""
	print("ğŸ æ¥æ”¶çå‹µ")

	# âœ… ä½¿ç”¨ PlayerDataManager å®Œæˆè¨“ç·´ä¸¦é ˜å–çå‹µ
	var result = PlayerDataManager.complete_training()

	if not result.success:
		GameManager.show_message("éŒ¯èª¤", result.get("error", "æœªçŸ¥éŒ¯èª¤"))
		return

	# é¡¯ç¤ºçµæœ
	var message = "è¨“ç·´å®Œæˆï¼\nå…±è¨“ç·´äº† %d å¼µå¡ç‰‡\næ¯å¼µå¡ç‰‡ç²å¾— %d ç¶“é©—å€¼" % [
		result.total_cards,
		result.exp_reward
	]

	if result.level_ups.size() > 0:
		message += "\n\nğŸ‰ å‡ç´šçš„å¡ç‰‡ï¼š"
		for level_up in result.level_ups:
			message += "\n  â€¢ %s â†’ Lv.%d" % [level_up.card_name, level_up.new_level]

	GameManager.show_message("è¨“ç·´å®Œæˆ", message)

	# ğŸ¯ é€šçŸ¥ä»»å‹™ç³»çµ±ï¼šè¨“ç·´å·²å®Œæˆä¸¦é ˜å–çå‹µ
	TaskManager.notify_event("training_completed", {
		"room_id": room_data.get("room_id", ""),
		"total_cards": result.total_cards,
		"exp_reward": result.exp_reward,
		"level_ups": result.level_ups
	})

	# ğŸ¯ é€šçŸ¥ä»»å‹™ç³»çµ±ï¼šå¡ç‰‡å‡ç´šäº‹ä»¶ï¼ˆç”¨æ–¼ä»»å‹™æ¢ä»¶æª¢æ¸¬ï¼‰
	for level_up in result.level_ups:
		TaskManager.notify_event("card_leveled_up", {
			"card_id": level_up.card_id,
			"card_name": level_up.card_name,
			"old_level": level_up.old_level,
			"new_level": level_up.new_level
		})
		print("ğŸ“¢ ä»»å‹™ç³»çµ±é€šçŸ¥ï¼š%s (%s) å‡ç´šåˆ° Lv.%d" % [level_up.card_name, level_up.card_id, level_up.new_level])

	# âœ… æ¸…ç©ºè¨“ç·´éšŠä¼ï¼ˆé¿å…æŒçºŒè¨“ç·´ï¼‰
	training_teams.clear()
	print("ğŸ§¹ è¨“ç·´éšŠä¼å·²æ¸…ç©º")

	# é‡ç½®ç‹€æ…‹
	current_state = TrainingState.IDLE
	update_ui()
